# FastapiObserver

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NEXT_STEPS.md  PR_REFACTOR_SUMMARY.md  README.md  benchmarks.md  kubernetes.md  main.py  pyproject.toml  test_middleware.py
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  runtime-stress.yml
docs/: advanced.md  architecture.md  audit-logging.md  configuration.md  contributing.md  db-tracing.md  deployment.md  graphql.md  index.md  logging.md  logtail-sink.md  loguru.md  opentelemetry.md  plugins.md  runtime-control.md  security.md  tuning.md
examples/: README.md  allowlist_app.py  audit_app.py  basic_app.py  db_tracing_app.py  graphql_app.py  otel_app.py  security_presets_app.py
examples/benchmarks/: advanced_observer_fastapi.py  advanced_plain_fastapi.py  app.py  harness.py  observer_fastapi.py  plain_fastapi.py  results.json  run_local_benchmark.sh
examples/full_stack/: Dockerfile  README.md  app.py  docker-compose.yml  generate_traffic.sh
examples/full_stack/config/: loki.yml  otel-collector.yml  prometheus.yml  tempo.yml
examples/full_stack/config/grafana/dashboards/: api-overview.json
examples/full_stack/config/grafana/provisioning/datasources/: datasources.yml
examples/k8s/: 00-namespace.yaml  10-demo-app.yaml  20-loki.yaml  21-tempo.yaml  22-otel-collector.yaml  23-prometheus.yaml  24-grafana.yaml  25-traffic-generator.yaml  README.md  kustomization.yaml
examples/migration_example/: logging_setup.py  main.py  metrics.py  middleware.py  migrated_main.py  migration_made.md  request_context.py
examples/time_saved/: README.md  docker-compose.yml  prometheus.yml  the_easy_way.py  the_hard_way.py
scripts/: deploy_pypi.sh  extract_changelog_section.py  replay_dlq.py  runtime_stress.py  verify_audit_chain.py
src/fastapiobserver/: __init__.py  config.py  control_plane.py  db_tracing.py  fastapi.py  logging.py  loguru.py  metrics.py  middleware.py  otel.py  plugins.py  profiles.py  propagation.py  request_context.py  security.py  sinks.py  utils.py
src/fastapiobserver/audit/: __init__.py  formatter.py  providers.py  verify.py
src/fastapiobserver/integrations/: strawberry.py
src/fastapiobserver/logging/: __init__.py  circuit_breaker.py  filters.py  formatter.py  queueing.py  setup.py  state.py
src/fastapiobserver/metrics/: __init__.py  builder.py  contracts.py  endpoint.py  noop.py  pathing.py  registry.py
src/fastapiobserver/metrics/prometheus/: __init__.py  backend.py  client.py  collector.py  exemplars.py  multiprocess.py
src/fastapiobserver/middleware/: __init__.py  body_capture.py  context.py  events.py  headers.py  ip.py  metrics.py  request_logging.py  span_errors.py
src/fastapiobserver/otel/: __init__.py  exclusions.py  lifecycle.py  logs.py  metrics.py  resource.py  settings.py  tracing.py  types.py
src/fastapiobserver/security/: __init__.py  normalize.py  policy.py  proxies.py  redaction.py
src/fastapiobserver/sinks/: __init__.py  builtin.py  discovery.py  factory.py  protocol.py  registry.py  stats.py
src/fastapiobserver/sinks/logtail/: __init__.py  dlq.py  handler.py  sink.py
src/observabilityfastapi/: __init__.py  config.py  control_plane.py  fastapi.py  logging.py  metrics.py  middleware.py  otel.py  plugins.py  request_context.py  security.py
tests/: conftest.py  conftest_otlp.py  test_audit_chain.py  test_body_media_allowlist.py  test_config_settings.py  test_db_tracing.py  test_dx_parity.py  test_excluded_url_precedence.py  test_fastapi_install.py  test_fork_queue_listener.py  test_graphql_integrations.py  test_lifespan_teardown.py  test_log_queue_controls.py  test_logging_schema_contract.py  test_logtail_dlq.py  test_loguru_bridge.py  test_metrics_contracts.py  test_metrics_optional_dependency.py  test_middleware.py  test_negotiate_content_type.py  test_otel_integration.py  test_otel_lifecycle.py  test_otel_log_correlation.py  test_otel_logs_from_env.py  test_otel_logs_pipeline.py  test_otel_metrics_from_env.py  test_otlp_export_integration.py  test_plugin_isolation.py  test_profiles.py  test_propagation.py  test_redaction_presets.py  test_route_template_cardinality.py  test_runtime_control_auth.py  test_security_audit_fixes.py  test_security_redaction.py  test_sink_circuit_breaker.py  test_sinks.py  test_trust_boundary.py  test_utils_refactors.py
