[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-observer"
version = "0.2.1"
description = "Zero-glue FastAPI observability with security presets and runtime controls"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Vitaee", email = "opensource@vitaee.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
keywords = ["fastapi", "observability", "logging", "metrics", "opentelemetry"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastapi>=0.129.0",
    "pydantic-settings>=2.10.1",
    "starlette>=0.52.1",
]

[project.urls]
Homepage = "https://github.com/Vitaee/FastapiObserver"
Documentation = "https://github.com/Vitaee/FastapiObserver#readme"
Repository = "https://github.com/Vitaee/FastapiObserver.git"
Issues = "https://github.com/Vitaee/FastapiObserver/issues"
Funding = "https://buymeacoffee.com/FYbPCSu"

[project.optional-dependencies]
fast-json = [
    "orjson>=3.11.7",
]
prometheus = [
    "prometheus-client>=0.24.1",
]
otel = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
]
otel-httpx = [
    "opentelemetry-instrumentation-httpx>=0.60b1",
]
otel-requests = [
    "opentelemetry-instrumentation-requests>=0.60b1",
]
all = [
    "orjson>=3.11.7",
    "prometheus-client>=0.24.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-requests>=0.60b1",
]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-randomly>=3.16.0",
    "ruff>=0.15.1",
    "cyclonedx-bom>=7.2.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["orjson", "orjson.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
